feat: add endpoints for changing report urgency and creating consultation
